@@ -1,0 +1,7 @@
+package URI::clickhouse;
+use base 'URI::_odbc';
+our $VERSION = '0.20';
+
+sub default_port { 8123 }
+
+1;
