@@ -1,6 +1,7 @@
 Revision history for Perl extension URI::db.
 
 0.23
+     - Added URI::clickhouse. Thanks to Ilia Rassadin for the PR (#18).
 
 0.22 2024-04-05T01:38:17Z
      - Changed Oracle database DBI parameter generation as follows:
